# libuvc

./: CMakeLists.txt  libuvc.pc.in  package.xml
