<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libuvc</name>
  <version>2.0.1</version>
  <description>libuvc</description>

  <maintainer email="asdf@test.nl">test</maintainer>

  <license>TEST</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libusb-1.0</build_depend>
  <exec_depend>libusb-1.0</exec_depend>
    <exec_depend>libusb-1.0-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
